Add test coverage (#3)
* Add comprehensive test coverage

- Add xUnit v3 test project with NSubstitute for mocking
- Extract interfaces for all services (IProcessRunner, IDevCertService, IMachineStoreService, IWslService)
- Add ServiceFactory for dependency injection in tests
- Refactor HttpsCommand to accept ServiceFactory for testability

Unit tests:
- DevCertStatusTests: parsing of exit codes and output
- CertificateInfoTests: JSON serialization, FromCertificate()
- ProcessRunnerTests: EscapeArgument(), real process execution
- DevCertServiceTests: mocked process runner tests
- WslServiceTests: path conversion, distro parsing (Windows-conditional)

Integration tests:
- CommandLineParsingTests: option parsing, validation rules

CI/CD:
- PR workflow now runs tests on Windows, Linux, and macOS
- CI workflow now runs tests before packaging
- Build action updated to build entire solution

Test results: 78 passed, 11 skipped (Windows-only WSL tests)

* Fix command injection vulnerabilities and race condition

Security fixes:
- Add EscapeShellArgument() for POSIX shell escaping (single-quote based)
- DevCertService.ExportAsync: Use EscapeArgument() for path and password
- WslService.ImportCertAsync: Use EscapeShellArgument() for WSL commands
- MachineStoreService: Use EscapeShellArgument() for Linux/macOS sudo commands

Race condition fix:
- ProcessRunner.RunAsync: Use Task.WhenAll() to read stdout/stderr concurrently
  with WaitForExitAsync, preventing deadlocks when output buffers fill

New tests:
- EscapeShellArgument tests for special shell characters ($, backticks, semicolons)
- DevCertService tests for path/password escaping
- WslService test for shell escaping

Test results: 103 total (91 passed, 12 skipped for Windows-only)

* Fix --wsl tests to only run on Windows

The --wsl option is only supported on Windows, so tests that validate
--wsl command line parsing should be platform-specific:

- Move --wsl test cases out of Parse_ValidCommandLines_Succeeds
- Add Pa

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
     permissions:
       contents: write
       packages: write
+      checks: write
 
     steps:
       - name: Checkout
@@ -25,6 +26,27 @@ jobs:
 
       - name: Build
         uses: ./.github/actions/build
+
+      - name: Test
+        run: dotnet test test/dotnet-dev-certs-plus.Tests --configuration Release --no-build --verbosity normal --logger "trx;LogFileName=test-results.trx" --logger "html;LogFileName=test-results.html" --results-directory ./test-results
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: test-results
+          path: |
+            ./test-results/*.trx
+            ./test-results/*.html
+          retention-days: 30
+
+      - name: Publish test results
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Test Results
+          path: ./test-results/*.trx
+          reporter: dotnet-trx
 
       - name: Calculate version
         id: version
